--- a/index.html
+++ b/index.html
@@ -20,5 +20,20 @@
     </nav>
   </header>
 
+  <main>
+    <section class="cta-section">
+        <div class="cta-content">
+          <h2>Emile is a good boy</h2>
+          <p>He enjoys taking walks, eating tasty treats, napping, & cuddling</p>
+          <button>Sign up</button>
+        </div>
+        <div class="cta-image">
+          <img src="images/emile.jpg" alt="Emile w croissant">
+        </div>
+      </section>
+      
+
+         
+  </main>
 </body>
 </html>
