--- a/index.html
+++ b/index.html
@@ -32,7 +32,39 @@
         </div>
       </section>
       
+      <section class="random-section">
+        <h2>The Traveling Frenchie</h2>
+        <br>
+      <div class="random-container">
+        <div class="random-box">
+          <img src="images/emile2.jpg" alt="Emile hiding">
+        </div>
+        <div class="random-box">
+          <img src="images/emile3.jpg" alt="Emile in the city">
+        </div>
+        <div class="random-box">
+          <img src="images/emile4.jpg" alt="Emile with friends">
+        </div>
+        <div class="random-box">
+          <img src="images/emile5.jpg" alt="Emile looking dapper">
+        </div>
+      </div>
 
+      <div class="random-row">
+          <div class="random-rowbox">
+            <p>Hiding!</p>
+          </div>
+          <div class="random-rowbox">
+            <p>In the city</p>
+          </div>
+          <div class="random-rowbox">
+            <p>With his friends</p>
+          </div>
+          <div class="random-rowbox">
+            <p>On a parkbench</p>
+          </div>
+          </div>
+    </section>   
          
   </main>
 </body>
