--- a/index.html
+++ b/index.html
@@ -65,6 +65,14 @@
           </div>
           </div>
     </section>   
+
+    <section class="quote-body">
+      <div class=""quote>
+        <h1>"Emile is an angel"</h1>
+        <p>-Jinkins</p>
+      </div>
+
+    </section>
          
   </main>
 </body>
