--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+
+  <!--Section 1-->
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,6 +23,8 @@
     </nav>
   </header>
 
+    <!--Section 2-->
+
   <main>
     <section class="cta-section">
         <div class="cta-content">
@@ -32,6 +37,8 @@
         </div>
       </section>
       
+    <!--Section 3-->
+
       <section class="random-section">
         <h2>The Traveling Frenchie</h2>
         <br>
@@ -66,13 +73,29 @@
           </div>
     </section>   
 
+    <!--Section 4-->
+
     <section class="quote-body">
       <div class=""quote>
         <h1>"Emile is an angel"</h1>
         <p>-Jinkins</p>
+        <br><br>
       </div>
-
     </section>
+
+    <!--Section 5-->
+
+    <footer>
+      <div class="banner">
+        <div class="left-side">
+          <h2>Stay updated with Emile</h2>
+          <p>Click on the button for photos & stories!</p>
+        </div>
+        <div class="right-side">
+          <a href="#" class="sign-up-btn">Sign Up</a>
+        </div>
+      </div>
+    </footer>    
          
   </main>
 </body>
