--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <div class="header-logo">
-      <p>EmileFans™</p>
+      <p>EmileClub</p>
     </div>
     <nav class="header-nav">
       <ul>
